# rust-shenanigans

./: .gitignore  README.md
ant/: Cargo.toml
ant/src/: main.rs
despair/: Cargo.toml
despair/src/: main.rs
draw/: Cargo.toml
draw/src/: main.rs
encodings/: Cargo.toml  a.out  build.rs  test.c  test.txt
encodings/src/: main.rs  msg.proto
glommio-bench/: Cargo.toml
glommio-bench/src/: main.rs
glommio-test/: Cargo.toml  build.rs
glommio-test/src/: grpc.rs  hyper_compat.rs  main.rs  test.proto
jit-shunty/: Cargo.toml
jit-shunty/src/: main.rs
junk/: Cargo.toml
junk/src/: main.rs
kafka/: Cargo.toml
kafka/src/: main.rs
lists/src/: first.rs  fourth.rs  second.rs  third.rs
phy/: Cargo.toml
phy/src/: main.rs
potentials/: Cargo.toml
potentials/src/: main.rs
power-law/: Cargo.toml
power-law/src/: main.rs
roids/: Cargo.toml
roids/src/: body.rs  game.rs  lib.rs  main.rs  vec2.rs
ser/: Cargo.toml
ser/src/: main.rs
server80/: Cargo.toml
server80/src/: http.rs  main.rs
snitch/: .gitignore  Cargo.toml  db.sql
snitch/src/: gopher.rs  lib.rs  main.rs
voronoi/: Cargo.toml  blur.fs
voronoi/src/: main.rs
