[package]
name = "glommio-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
futures-core = "0.3.31"
futures-lite = "2.6.0"
glommio = "0.9.0"
hyper = { version = "1.6.0", features = ["http2", "server"] }
prost = "0.13.5"
tokio-stream = "0.1.17"
tonic = "0.13.0"
tower = "0.5.2"

[build-dependencies]
tonic-build = { version = "0.13.0", features = ["prost"] }
