[package]
name = "snitch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.28", features = ["derive"] }
crossbeam-channel = "0.5.14"
encoding = "0.2.33"
env_logger = "0.11.6"
log = "0.4.25"
regex_static = "0.1.1"
rusqlite = "0.33.0"
